:sparkles: endpoint de consultar deuda de un solo credito funcionando
